--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "valid-url": "^1.0.9"
   },
   "license": "MIT",
   "devDependencies": {
